--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Rothschild GFX</title>
+  <title>Rothschild GFX/ Contact</title>
     <link rel="stylesheet" href="css/button.css">
     	<link rel="stylesheet" href="css/index.css">
-    		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="img/favicon.png" type="image/png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body onload="loadfuncs();">
@@ -25,8 +26,9 @@
     <div id="socials">
         	<a href="http://www.twitter.com/rothschild_cod"><img src="img/twitter_white.png" draggable="false"/></a>
             <a href="https://www.behance.net/rothschildGFX/"><img src="img/behance_white.png" draggable="false"/></a>
+            <a href="https://www.flickr.com/people/rothschildgfx/"><img src="img/flickr_white.png" draggable="false"/></a>
             <a href="#"><img src="img/tumblr_white.png" draggable="false"draggable="false"/></a>
-            <a href="http://www.github.com/maxhewett"><img src="img/github_white.png" draggable="false"/></a>
+            <a href="https://github.com/rothschildGFX/"><img src="img/github_white.png" draggable="false"/></a>
      </div><!--end socials div-->
 <div id="placeholder2">
 </div>
