--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/button.css">
     	<link rel="stylesheet" href="css/index.css">
         <link rel="icon" href="img/favicon.png" type="image/png" />
+        <link rel="apple-touch-icon" href="img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
