--- a/port.html
+++ b/port.html
@@ -49,6 +49,7 @@
                 	<p>I'm an avid gamer, and I'm really into the competitive Call of Duty scene. Some of the players have asked me to design them social media presences; here are some.</p>
     		<hr/>
     <!---imgs start here--->
+    	<img src="Clients/Vital/Vital Banner 4.png"/>
     	<img src="Clients/xAuthoriity/xAuthority Header.png"/>
         <img src="Clients/Verticc/Verticc Banner.png"/>
         <img src="Clients/Sup3RR/Sup3RRBanner.png"/>
