Updated clients list

--- a/port.html
+++ b/port.html
@@ -49,16 +49,22 @@
                 	<p>I'm an avid gamer, and I'm really into the competitive Call of Duty scene. Some of the players have asked me to design them social media presences; here are some.</p>
     		<hr/>
     <!---imgs start here--->
-    	<img src="Clients/Vital/Vital Banner 4.png"/>
-    	<img src="Clients/xAuthoriity/xAuthority Header.png"/>
-        <img src="Clients/Verticc/Verticc Banner.png"/>
-        <img src="Clients/Sup3RR/Sup3RRBanner.png"/>
+    	<img src="Clients/Risen/risen-header-v4.jpg"/>
+    	<img src="Clients/Risen/Sagalle.jpg"/>
+        <img src="Clients/Vital/Vital Banner 4.png"/>
+        <img src="Clients/Smithy/Smithyy.png"/>
+    	<img src="Clients/Forbidden/Forbidden-v2.jpg"/>
+        <img src="Clients/VOiD/Miracles Header.png"/>
+        <img src="Clients/Hazardous/Hazardous.jpg"/>
+        <img src="Clients/Delirium/Deliriumm Header blue.png"/>
+        <img src="Clients/Delirium/deliriumm.png"/>
         <img src="Clients/Rothschild/rc-banner7 copy.png"/>
-        <img src="Clients/Rezzi/RezziHeader.png"/>
+        <img src="Clients/Maddie/Maddie Banner.png"/>
         <img src="Clients/Porky/PorkyBanner2.png"/>
+        <img src="Clients/Elmzs/final.jpg"/>
+        <img src="Clients/Aveerse/aveerse-final.jpg"/>
+        <img src="Clients/Aveerse/Vandal-Header-4-v2.jpg"/>
         <img src="Clients/Incryeeze/Incryeeze Banner - 2nd revision.png"/>
-        <img src="Clients/Aeth Kilow/Aeth Kilow Logo.png"/>
-        <img src="Clients/Fragezyy/FragezyyLogo3.png"/>
         <img src="Clients/Swiift/SWIIFT-Logo.png"/>
    	</div><!--end colourbox div-->
     <div class="portbox" id="portbox3">
