Fixed image links

--- a/port.html
+++ b/port.html
@@ -52,14 +52,14 @@
     	<img src="Clients/Risen/risen-header-v4.jpg"/>
     	<img src="Clients/Risen/Sagalle.jpg"/>
         <img src="Clients/Vital/Vital Banner 4.png"/>
-        <img src="Clients/Smithy/Smithyy.png"/>
+        <img src="Clients/Smithy/smithyy.png"/>
     	<img src="Clients/Forbidden/Forbidden-v2.jpg"/>
         <img src="Clients/VOiD/Miracles Header.png"/>
         <img src="Clients/Hazardous/Hazardous.jpg"/>
         <img src="Clients/Delirium/Deliriumm Header blue.png"/>
         <img src="Clients/Delirium/deliriumm.png"/>
         <img src="Clients/Rothschild/rc-banner7 copy.png"/>
-        <img src="Clients/Maddie/Maddie Banner.png"/>
+        <img src="Clients/Maddie/maddie-Banner.png"/>
         <img src="Clients/Porky/PorkyBanner2.png"/>
         <img src="Clients/Elmzs/final.jpg"/>
         <img src="Clients/Aveerse/aveerse-final.jpg"/>
