--- a/port.html
+++ b/port.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,21 +17,21 @@
 			<script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
 			<script src="js/index.js"></script>
             	<a href="index.html"><img src="r-imgs/r2.png" draggable="false"/></a>
-    </div><!--end navbar div-->
+    </div><!--end navbar div--><!--
     <div id="linksbar">
     	<ul>
 			<li><a href="#">Tutorials</li></a>
             <li><a href="contact.html">Contact</li></a>
             <li><a href="index.html">Home</li></a>
         </ul> 	
-    </div><!--end linksbar div-->
+    </div><!--end linksbar div--><!--
     <div id="socials">
         	<a href="http://www.twitter.com/rothschild_cod"><img src="img/twitter_white.png" draggable="false"/></a>
             <a href="https://www.behance.net/rothschildGFX/"><img src="img/behance_white.png" draggable="false"/></a>
             <a href="https://www.flickr.com/people/rothschildgfx/"><img src="img/flickr_white.png" draggable="false"/></a>
             <a href="#"><img src="img/tumblr_white.png" draggable="false"draggable="false"/></a>
             <a href="https://github.com/rothschildGFX/"><img src="img/github_white.png" draggable="false"/></a>
-     </div><!--end socials div-->
+     </div><!--end socials div--><!--
 <div id="placeholder2">
 </div>
     <div class="portbox" id="portbox1">
@@ -39,7 +40,7 @@
     			<p>Here, you'll find my portfolio; which is basically just a collection of some of the notable projects I've worked on recently (or just those which I haven't signed a NDA for).</p>
         <hr/>
     </div><!--end colourbox div-->
-<!--- Navigtion bar, slider & social links finish here, main content of site starts below in container tag---> 
+<!--- Navigtion bar, slider & social links finish here, main content of site starts below in container tag---> <!--
 
 <div id="container">
     <div class="portbox" id="portbox2">
@@ -48,7 +49,7 @@
                 	<img src="Clients/Giveaway/Giveaway-Header.png"/>
                 	<p>I'm an avid gamer, and I'm really into the competitive Call of Duty scene. Some of the players have asked me to design them social media presences; here are some.</p>
     		<hr/>
-    <!---imgs start here--->
+    <!---imgs start here---><!--
     	<img src="Clients/xAuthoriity/xAuthority Header.png"/>
         <img src="Clients/Verticc/Verticc Banner.png"/>
         <img src="Clients/Sup3RR/Sup3RRBanner.png"/>
@@ -59,7 +60,7 @@
         <img src="Clients/Aeth Kilow/Aeth Kilow Logo.png"/>
         <img src="Clients/Fragezyy/FragezyyLogo3.png"/>
         <img src="Clients/Swiift/SWIIFT-Logo.png"/>
-   	</div><!--end colourbox div-->
+   	</div><!--end colourbox div--><!--
     <div class="portbox" id="portbox3">
     			<hr/>
         		<h1 class="cboxh1">Websites</h1>
@@ -73,17 +74,17 @@
                     <img src="Screenshots/DT.png"/>
                     
                     <hr/>
-     </div><!--end colourbox div-->
+     </div><!--end colourbox div--><!--
      <div class="portbox" id="portbox4">
     			<hr/>
         		<h1 class="cboxh1">Not convinced of my talents? </h1>
                     <p>That's O.K. Feel free to contact me <a href="#">here</a> so I can send you some other things which might convince you.</p>	
                	 	<hr/>
      </div><!--end colourbox div-->
-</div><!--end container div-->
+</div><!--end container div--><!--
 <div id="credbox">
 <p>COPYRIGHT - ROTHSCHILD GFX - 2015</p>
 </div>
 </body>
 
-</html>
+</html>-->
